--- a/CoursesApp/ClientApp/src/app/courses/courses-list/courses-list.component.html
+++ b/CoursesApp/ClientApp/src/app/courses/courses-list/courses-list.component.html
@@ -1,1 +1,78 @@
-<p>courses-list works!</p>
+
+<h1>Courses</h1>
+
+
+<div class="example-button-row">
+    <button class="button1" mat-raised-button [routerLink]='["../edit"]' color="warn">Add</button>
+</div>
+<br />
+
+<p>Current page: {{courses?.currentPage}}</p>
+<p>Last page: {{courses?.totalPages}}</p>
+
+<mat-paginator [length]="courses?.totalItems"
+               [pageSize]="courses?.itemsPerPage"
+               [pageSizeOptions]="[5, 10, 25, 50, 100]"
+               (page)="pageEvent = loadCourses($event)">
+</mat-paginator>
+
+<table mat-table [dataSource]="courses?.items" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+    <!-- Position Column -->
+    <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef style="width:33%"> Name </th>
+        <td mat-cell *matCellDef="let course"> {{course.name}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef style="width:12%"> Category </th>
+        <td mat-cell *matCellDef="let course"> {{course.category}} </td>
+    </ng-container>
+
+    <!-- Difficulty Column -->
+    <ng-container matColumnDef="difficulty">
+        <th mat-header-cell *matHeaderCellDef style="width:12%">Difficulty </th>
+        <td mat-cell *matCellDef="let course"> {{course.difficulty}} </td>
+    </ng-container>
+
+    <!-- Date added Column -->
+    <ng-container matColumnDef="dateAdded">
+        <th mat-header-cell *matHeaderCellDef style="width:21%">Date added </th>
+        <td mat-cell *matCellDef="let course"> {{course.dateAdded}} </td>
+    </ng-container>
+
+    <!-- No. of reviews Column -->
+    <ng-container matColumnDef="numberOfReviews">
+        <th mat-header-cell *matHeaderCellDef style="width:12%"> No. of reviews </th>
+        <td mat-cell *matCellDef="let course"> {{course.numberOfReviews}} </td>
+    </ng-container>
+
+
+    <!-- Action Column -->
+    <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef style="width:14%"> Action </th>
+        <td mat-cell *matCellDef="let course">
+            <button mat-icon-button matTooltip="Edit" [matTooltipPosition]="'after'">
+                <mat-icon aria-label="Example icon-button with a heart icon" [routerLink]="['../edit', course.id]">edit</mat-icon>
+            </button>
+
+            <button mat-icon-button matTooltip="Delete" [matTooltipPosition]="'after'">
+                <mat-icon aria-label="Example icon-button with a heart icon " (click)="deleteCourse(course)">delete</mat-icon>
+            </button>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+<mat-progress-bar mode="indeterminate" *ngIf="!courses"></mat-progress-bar>
+
+<mat-paginator [length]="courses?.totalItems"
+               [pageSize]="courses?.itemsPerPage"
+               [pageSizeOptions]="[5, 15, 25, 50, 100]"
+               (page)="pageEvent = loadCourses($event)">
+</mat-paginator>
