--- a/CoursesApp/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CoursesApp/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -42,6 +42,9 @@
                   <a class="nav-link text-dark" [routerLink]="['/login']">Sign In</a>
               </li>
 
+              <li class="nav-item" [routerLinkActive]="['link-active']">
+                  <a class="nav-link text-dark" [routerLink]="['/courses']">Courses</a>
+              </li>
           </ul>
       </div>
     </div>
