--- a/CoursesApp/ClientApp/src/app/counter/counter.component.html
+++ b/CoursesApp/ClientApp/src/app/counter/counter.component.html
@@ -1,6 +1,6 @@
 <h1>Counter</h1>
 
-<p>This is a simple example of an Angular component.</p>
+<p>Don't bite your nails. Play the counter.</p>
 
 <p aria-live="polite">Current count: <strong>{{ currentCount }}</strong></p>
 
