--- a/CoursesApp/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CoursesApp/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -45,6 +45,10 @@
               <li class="nav-item" [routerLinkActive]="['link-active']">
                   <a class="nav-link text-dark" [routerLink]="['/courses']">Courses</a>
               </li>
+
+              <li class="nav-item" [routerLinkActive]="['link-active']">
+                  <a class="nav-link text-dark" [routerLink]="['/reviews']">Reviews</a>
+              </li>
           </ul>
       </div>
     </div>
