Changes done on courses for frontend

--- a/CoursesApp/ClientApp/src/app/courses-details/courses-details.component.html
+++ b/CoursesApp/ClientApp/src/app/courses-details/courses-details.component.html
@@ -1,6 +1,6 @@
 <p *ngIf="!course"><em>Loading...</em></p>
 
-<a [routerLink]="['/fetch-data']" routerLinkActive="active">Back</a>
+<a [routerLink]="['/list']" routerLinkActive="active">Back</a>
 <br />
 <table class='table table-striped' aria-labelledby="tableLabel" *ngIf="course">
     <tbody>
